--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>PatrimonialAdvisorWeb</title>
-  <base href="https://KevinArzapalo.github.io/patrimonialAdvisorWeb">
+   <base href="http://patrimonialadvisor.hini.site/">
+  <!--<base href="https://KevinArzapalo.github.io/patrimonialAdvisorWeb">-->
   <!--<base href="http://localhost:4200">-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
