--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>PatrimonialAdvisorWeb</title>
-  <base href="https://patrimonialadvisor.hini.site">
+  <base href="https://patrimonialadvisor.hini.site/">
   <!--<base href="https://KevinArzapalo.github.io/patrimonialAdvisorWeb">-->
   <!--<base href="http://localhost:4200">-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
