--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>PatrimonialAdvisorWeb</title>
-  <base href="https://patrimonialadvisor.hini.site/">
+  <!-- <base href="https://patrimonialadvisor.hini.site/"> -->
   <!--<base href="https://KevinArzapalo.github.io/patrimonialAdvisorWeb">-->
-  <!--<base href="http://localhost:4200">-->
+  <base href="http://localhost:4200">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/icono_logo_HiNi_SinFondo.png">
   <!--<link rel="icon" type="image/png" href="assets/logo_HiNi_SinFondo.png">-->
